Proj2: updated pom and resource folder, fixed jar

--- a/group11-proj2/pom.xml
+++ b/group11-proj2/pom.xml
@@ -52,7 +52,7 @@
 							<configuration>
 								<transformers>
 									<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-										<mainClass>com.group11proj2.proj2</mainClass>
+										<mainClass>com.group11proj2.Proj2</mainClass>
 									</transformer>
 								</transformers>
 								<artifactSet>
