--- a/group11-proj3/pom.xml
+++ b/group11-proj3/pom.xml
@@ -17,6 +17,11 @@
 			    <version>3.4</version>
 			</dependency>
 			<dependency>
+			    <groupId>org.apache.commons</groupId>
+			    <artifactId>commons-csv</artifactId>
+ 			   <version>1.4</version>
+			</dependency>
+			<dependency>
 				<groupId>rome</groupId>
 				<artifactId>rome</artifactId>
 				<version>1.0</version>
